lots o changes